# game-test

./: .gitignore  Cargo.toml  Dockerfile  ISSUES.txt  README.md  REFACTORS.txt  build.rs  mobs.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  test.yml  zk.yml
art/: banana.aseprite  base_character.aseprite  base_character_walking.aseprite  blob.aseprite  duck_blue.aseprite  duck_blue_standing.aseprite  flower.aseprite  pointer.aseprite  stick.aseprite  sword.aseprite
assets/: mob_manifest.json5
assets/items/: gold.json5
assets/maps/: crab_beach.json5  crab_beach.map.json5  digital_skyscrapers.map.json5  digital_skyscrapers_1.map.json5  eastwatch.json5  eastwatch.map.json5  playtest0.map.json5
assets/mobs/: duck_blue.json5
assets/npc/: welcome_flower.json5
assets/player/: default.json5
assets/sprites/: banana.sprite.json5  duck_blue.json5
crates/client/: Cargo.toml
crates/client/src/: map.rs
crates/client/src/components/: mob.rs
crates/client/src/plugins/: animated_sprite.rs  database.rs  engine.rs  engine_sync.rs  game_data_loader.rs  info_text.rs  loading_screen.rs  mod.rs  player_inventory.rs
crates/client/src/ui/: key_binding.rs
crates/db/src/: ability_exp_record.rs  lib.rs  player_record.rs  player_stats.rs
crates/game_common/: Cargo.toml
crates/game_common/src/: lib.rs
crates/game_common/src/data/: map.rs  npc.rs
crates/game_common/src/entity/: emoji.rs  message.rs  mob.rs  mob_damage.rs  mob_spawn.rs  npc.rs  player.rs
crates/game_common/src/system/: atomic_move_system.rs  gravity.rs  mod.rs  player_exp.rs  weightless.rs
crates/keind/: Cargo.toml
crates/keind/src/: engine.rs  entity.rs  lib.rs  prelude.rs  system.rs
crates/keind/src/test/: mod.rs
crates/keind_macros/: Cargo.toml
crates/keind_macros/src/: engine_entity.rs  entity_system.rs  lib.rs
crates/keind_time/: Cargo.toml  README.md
crates/keind_zk/: Cargo.toml  README.md  build.rs
crates/keind_zk/elf/: engine  noop  test
crates/keind_zk/src/: lib.rs
crates/keind_zk/src/zk_programs/: engine.rs  mod.rs  noop.rs
crates/server/: Cargo.toml
crates/server/src/: game.rs  map_instance.rs  network.rs
maps/: crab_beach.json5  eastwatch.json5  welcome.json5
mobs/: duck_blue.json5
scripts/: publish_web.sh  update_playtest.sh
src/: action.rs  actor.rs  asset_buffer.rs  engine.rs  game.rs  input_handler.rs  item.rs  lib.rs  main.rs  map.rs  mob.rs  mob_data.rs  player.rs
src/client/: asset_buffer.rs  game.rs  gui.rs  interpolation.rs  item.rs  loading_screen.rs  login.rs  main.rs  map.rs  map_data_loader.rs  mob.rs  mob_health_bar.rs  network.rs  player.rs  renderable.rs  smooth_camera.rs  sprite.rs  sprite_data_loader.rs  tick_sync.rs
src/client/components/: damage.rs  mob.rs  mod.rs  player.rs
src/client/network/: mod.rs  network_native.rs  network_wasm.rs
src/client/plugins/: chat.rs  engine.rs  engine_sync.rs  gui.rs  login_gui.rs  mod.rs  smooth_camera.rs
src/client/renderable/: mob.rs  mod.rs
src/client_test/: main.rs
src/db/: ability_exp_record.rs  mod.rs  player_record.rs  player_stats.rs
src/engine/: damage_calc.rs  emoji.rs  entity.rs  game.rs  game_event.rs  image_tmp.rs  mob.rs  mob_spawn.rs  mob_spawner.rs  mod.rs  platform.rs  player.rs  portal.rs  rect.rs  text.rs
src/engine/entity/: message.rs  mob.rs  mob_damage.rs  mob_spawn.rs  mod.rs  platform.rs  player.rs  portal.rs  rect.rs
src/server/: README.md  game.rs  global_state.rs  item.rs  main.rs  map_instance.rs  mob.rs  network.rs  player.rs  player_connection.rs  state.rs
src/server/db/: handler.rs  mod.rs  player_table.rs
web/: index.html
