[package]
name = "game-test"
version = "0.1.0"
edition = "2024"

[features]
default = ["server", "client"]
client = ["bevy", "bevy_egui", "bevy_simple_text_input", "bevy/web", "bevy/jpeg"]
server = ["sled"]
trace = ["bevy/trace", "bevy/trace_tracy", "tracy-client"]

[lib]
name = "game_test"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
required-features = ["client"]

[[bin]]
name = "client_test"
path = "src/client_test/main.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/server/main.rs"
required-features = ["server"]

[build-dependencies]
json5 = "0.4.1"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
serde_json = "1.0.140"

[dependencies]
anyhow = "1.0.95"
bevy_math = { version = "0.16.0", features = ["std", "rand", "curve", "serialize"] }
bevy_simple_text_input = { version = "0.11.0", optional = true }
bincode = "1.3.3"
flume = "0.11.1"
json5 = "0.4.1"
nanoid = "0.4.0"
once_cell = "1.20.3"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
sled = { version = "0.34.7", optional = true }
futures-util = "0.3.31"
bevy = { version = "0.16.0", features = ["web", "jpeg"], optional = true }
web-time = "1.1.0"

tracy-client = { version = "=0.18.0", optional = true }
rand_chacha = "0.9.0"
bevy_egui = { version = "0.34.1", optional = true }
blake3 = { version = "1.8.2", features = ["serde"] }
dashmap = "6.1.0"
strum = { version = "0.27.1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["handshake", "native-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
ws_stream_wasm = "0.7.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
bevy_web_asset = "0.11.0"
web-sys = "0.3.77"
js-sys = "0.3.77"
