[workspace]
resolver = "3"

members = ["crates/keind_zk", "crates/keind", "crates/keind_time", "crates/game_common", "crates/client", "crates/db", "crates/server"]#, "crates/zk-risczero", "crates/zk-sp1"]

[workspace.dependencies]
anyhow = "1.0.95"
bevy_math = { version = "0.16.0", features = ["std", "rand", "curve", "serialize"] }
bincode = "1.3.3"
flume = "0.11.1"
json5 = "0.4.1"
nanoid = "0.4.0"
rand = { version = "0.9.0", default-features = false }
serde = { version = "1.0.217", features = ["derive", "rc"] }
web-time = "1.1.0"
tracy-client = { version = "=0.18.0" }
rand_chacha = "0.9.0"
rand_xoshiro = "0.7.0"
blake3 = { version = "1.8.2", features = ["serde"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.43.0" }
redb = { version = "2.6.0" }
once_cell = "1.20.3"
futures-util = "0.3.31"

